[project]
name = "loop-image"
description = "ComfyUI Loop Image is a node package specifically designed for image loop processing. It provides two main processing modes: Batch Image Processing and Single Image Processing, along with supporting image segmentation and merging functions."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "numpy"]

[project.urls]
Repository = "https://github.com/WainWong/ComfyUI-Loop-image"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cybereve-wain"
DisplayName = "ComfyUI-Loop-image"
Icon = ""
